# kwin

autotests/: mock_effectshandler.h
autotests/integration/: internal_window.cpp
effects/showfps/: showfps.cpp  showfps.h  showfps.kcfg  showfps_config.ui
src/: CMakeLists.txt  effects.cpp  effects.h  gestures.cpp  input.cpp  internal_client.cpp  onscreennotification.cpp  renderloop.cpp  scene.h  surfaceitem.cpp  surfaceitem.h  surfaceitem_wayland.cpp  toplevel.cpp  toplevel.h  unmanaged.cpp  waylandclient.cpp  xdgshellclient.cpp  xdgshellclient.h
src/effects/backgroundcontrast/: contrast.cpp  contrastshader.cpp
src/effects/blur/: blur.cpp
src/effects/desktopgrid/: desktopgrid.cpp
src/kcmkwin/kwinrules/: kcmrules.cpp  kcmrules.h  main.cpp
src/libkwineffects/: kwineffects.h  kwinglplatform.cpp
src/platformsupport/scenes/opengl/: abstract_egl_backend.cpp  openglbackend.cpp  openglbackend.h  openglframeprofiler.cpp  openglframeprofiler.h
src/platformsupport/scenes/qpainter/: qpainterbackend.h
src/plugins/scenes/opengl/: scene_opengl.cpp  scene_opengl.h
src/plugins/scenes/qpainter/: scene_qpainter.cpp  scene_qpainter.h
src/scripting/: scripting_model.cpp  scripting_model.h
src/scripts/expo/: CMakeLists.txt
src/scripts/expo/package/: metadata.desktop
src/scripts/expo/package/contents/config/: main.xml
src/scripts/expo/package/contents/ui/: ScreenView.qml  WindowHeap.qml  config.ui  main.qml
src/tabbox/: tabbox.cpp
